:boom: Rewrite properties decoding rules.